--- a/gradle/javadocStyleSheet.css
+++ b/gradle/javadocStyleSheet.css
@@ -1,5 +1,5 @@
-# originally from http://sensemaya.org/files/stylesheet.css and then modified
-# http://sensemaya.org/maya/2009/07/10/making-javadoc-more-legible
+/* # originally from http://sensemaya.org/files/stylesheet.css and then modified */
+/* # http://sensemaya.org/maya/2009/07/10/making-javadoc-more-legible /
 
 /* Javadoc style sheet */
 
